--- a/style.css
+++ b/style.css
@@ -472,6 +472,7 @@ iframe {
 .section3-traiteur {
     min-height: 40vh;
     padding-top: 60px;
+    padding-bottom: 20px;
     color: #d3d3d3;
     background: linear-gradient(rgba(136, 74, 41, 0.4), rgba(249,91,6,0.6)),
                 url("images/banner-head-accueil.jpg") center/cover no-repeat;
@@ -480,20 +481,26 @@ iframe {
 }
 .section3-traiteur h3 { font-size: 36px; margin-bottom: 20px; }
 .section3-traiteur p { color: #d3d3d3; font-size: 20px; margin-bottom: 30px; font-weight: 900; }
-.section3-traiteur button {
-    padding: 15px 40px;
+.section3-traiteur a {
+    padding: 10px;
     border-radius: 50px;
     border: 2px solid #ff5722;
     background-color: #d3d3d3;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
-.section3-traiteur button:hover {
+.section3-traiteur a:hover {
     transform: scale(1.2);
+}
+
+a:hover{
+    transform: scale(1.2);
+    cursor: pointer;
 }
 button:hover{
     transform: scale(1.2);
+    cursor: pointer;
 }
-.section3-traiteur button a {
+.section3-traiteur a {
     text-decoration: none;
     color: var(--primary);
     font-weight: 600;
